--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Snake Game by g4nggaaa</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
+      margin: 0;
+      padding: 0;
       text-align: center;
       font-family: 'Arial', sans-serif;
       background: url('https://cdn.idntimes.com/content-images/community/2023/06/whatsapp-image-2023-06-25-at-110424-pm-770cbc2889bb4c14bf5042be7b505d5d-6a73b3d4e83733787d0b79dd7942d764.jpeg') no-repeat center center fixed;
@@ -12,7 +15,8 @@
       color: #fff;
     }
     h1 {
-      font-size: 40px;
+      font-size: 28px;
+      margin-top: 10px;
       color: #fff;
       text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
     }
@@ -20,10 +24,11 @@
       background: rgba(0, 0, 0, 0.8);
       border: 3px solid lime;
       box-shadow: 0 0 20px lime;
+      margin-top: 10px;
     }
     button, select {
-      margin: 10px;
-      padding: 12px 25px;
+      margin: 5px;
+      padding: 10px 18px;
       font-weight: bold;
       background: #5cdb95;
       border: 2px solid #45a29e;
@@ -37,12 +42,36 @@
       background: #45a29e;
     }
     #scoreboard {
-      margin: 15px;
-      font-size: 24px;
+      margin: 10px;
+      font-size: 20px;
       color: #fff;
     }
     #scoreboard span {
       font-weight: bold;
+    }
+    .controls {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 10px;
+    }
+    .arrow-buttons {
+      display: grid;
+      grid-template-columns: repeat(3, auto);
+      gap: 5px;
+      margin-top: 10px;
+    }
+    .arrow-buttons button {
+      width: 60px;
+      height: 60px;
+      font-size: 24px;
+    }
+
+    @media screen and (max-width: 500px) {
+      canvas {
+        width: 300px;
+        height: 300px;
+      }
     }
   </style>
 </head>
@@ -54,25 +83,28 @@
     Score: <span id="score">0</span> | High Score: <span id="highscore">0</span>
   </div>
 
-  <canvas id="game" width="400" height="400"></canvas><br>
+  <canvas id="game" width="400" height="400"></canvas>
 
-  <div>
-    <button onclick="changeDir('UP')">⬆️</button><br>
-    <button onclick="changeDir('LEFT')">⬅️</button>
-    <button onclick="changeDir('DOWN')">⬇️</button>
-    <button onclick="changeDir('RIGHT')">➡️</button><br>
-  </div>
+  <div class="controls">
+    <div class="arrow-buttons">
+      <div></div><button onclick="changeDir('UP')">⬆️</button><div></div>
+      <button onclick="changeDir('LEFT')">⬅️</button>
+      <button onclick="changeDir('DOWN')">⬇️</button>
+      <button onclick="changeDir('RIGHT')">➡️</button>
+    </div>
 
-  <div>
-    <label for="speed">Kecepatan:</label>
-    <select id="speed" onchange="setSpeed()">
-      <option value="200">Lambat</option>
-      <option value="150" selected>Sedang</option>
-      <option value="100">Cepat</option>
-      <option value="70">Sangat Cepat</option>
-    </select>
-    <button onclick="startGame()">▶️ Mulai</button>
-    <button onclick="resetGame()">🔄 Reset</button>
+    <div style="margin-top: 10px;">
+      <label for="speed">Kecepatan:</label>
+      <select id="speed" onchange="setSpeed()">
+        <option value="200">Lambat</option>
+        <option value="150" selected>Sedang</option>
+        <option value="100">Cepat</option>
+        <option value="70">Sangat Cepat</option>
+      </select>
+      <br>
+      <button onclick="startGame()">▶️ Mulai</button>
+      <button onclick="resetGame()">🔄 Reset</button>
+    </div>
   </div>
 
   <script>
@@ -143,11 +175,11 @@
     function draw() {
       ctx.clearRect(0, 0, canvasSize, canvasSize);
       for (let i = 0; i < snake.length; i++) {
-        ctx.fillStyle = i === 0 ? "#00FF00" : "#006400";  // Color kepala berbeda
+        ctx.fillStyle = i === 0 ? "#00FF00" : "#006400";
         ctx.fillRect(snake[i].x, snake[i].y, box, box);
       }
 
-      ctx.fillStyle = "#FF0000";  // Warna makanan
+      ctx.fillStyle = "#FF0000";
       ctx.fillRect(food.x, food.y, box, box);
 
       let head = { x: snake[0].x, y: snake[0].y };
